add new /download-attendees admin API, add additional fields to event stats